# DragonSci

./: .gitignore  Cargo.toml  README.md  demo.py  demo_line2d.py  example.py  pyproject.toml  run.bat  run.sh  start.bat  start.sh  test_bench.py
.cargo/: config.toml
.github/workflows/: release.yml
.pytest_cache_local/v/cache/: lastfailed  nodeids
python/dragonsci/: __init__.py  figure.py  jupyter_widget.py  widget.py
scripts/: build_wheel.py
src/: camera.rs  colormap.rs  grid.rs  lib.rs  renderer.rs
src/shaders/: chart2d_lines.wgsl  mesh.wgsl  points.wgsl  points_lod.wgsl
tests/: conftest.py  test_figure.py  test_jupyter.py  test_labels.py  test_marginals.py  test_smoke.py  test_statistical_overlays.py
